--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
   </head>
   <body>
@@ -68,8 +68,7 @@
               src="./images/team-1.jpg"
               alt="Mark Guerrero photo"
               width="264"
-              height="260"
-            />
+              height="260">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
