--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
   </head>
   <body>
@@ -77,8 +77,7 @@
               src="./images/team-2.jpg"
               alt="Tom Ford photo"
               width="264"
-              height="260"
-            />
+              height="260">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
@@ -87,8 +86,7 @@
               src="./images/team-3.jpg"
               alt="Camila Garcia photo"
               width="264"
-              height="260"
-            />
+              height="260">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
@@ -97,8 +95,7 @@
               src="./images/team-4.jpg"
               alt="Daniel Wilson photo"
               width="264"
-              height="260"
-            />
+              height="260">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
