--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
               src="./images/team-1.jpg"
               alt="Mark Guerrero photo"
-              width="264"
+              width="360"
               height="260">
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -90,6 +90,11 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
           <li>
             <img
               src="./images/team-4.jpg"
@@ -110,3 +115,4 @@
       </p>
     </footer>
   </body>
+</html>
