--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Effective Solutions for Your Business</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -28,7 +28,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>Tips</h2>
+        <h2>Section</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -60,55 +60,47 @@
           </li>
         </ul>
       </section>
+
       <section>
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img
-              src="./images/team-1.jpg"
-              alt="Mark Guerrero photo"
-              width="360"
-              height="260">
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <img src="./images/img1.jpg" alt="computer" width="360" />
           </li>
-          <li>
-            <img
-              src="./images/team-2.jpg"
-              alt="Tom Ford photo"
-              width="360"
-              height="260">
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team-3.jpg"
-              alt="Camila Garcia photo"
-              width="360"
-              height="260">
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
+          <li><img src="./images/img2.jpg" alt="phone" width="360" /></li>
+          <li><img src="./images/img3.jpg" alt="phone" width="360" /></li>
         </ul>
       </section>
+
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/team-4.jpg"
-              alt="Daniel Wilson photo"
-              width="264"
-              height="260">
+            <img src="./images/team-1.jpg" alt="team member" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/team-2.jpg" alt="team member" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/team-3.jpg" alt="team member" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/team-4.jpg" alt="team member" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
